# mtlib

./: .gitignore  CMakeLists.txt  README.md
docs/design/: 2d-dcel-api.md  dcel-api.md
src/: CMakeLists.txt
src/Examples/: CMakeLists.txt  chull.cpp
src/Examples/common/: performance_timer.cpp  performance_timer.h
src/MTLib/: CMakeLists.txt  mtlib.h
src/MTLib/algebra/: CMakeLists.txt  common.h  eigen_helpers.cpp  eigen_helpers.h  linalg.h  vec.h
src/MTLib/comp_geo/: CMakeLists.txt  convex_hull_2d.cpp  convex_hull_2d.h  half_edge_list_2d.h  is_convex_2d.h  overlap_convex_point_2d.h
src/MTLib/ds/: CMakeLists.txt  dcel.h
src/MTLib/geometry/: CMakeLists.txt  segment.h
src/MTLib/intersection/: CMakeLists.txt  intersect_segment_segment_2D.h  intersect_segment_vec_2D.h  intersect_segments_2D.h  result_segment_segment.h
src/MTLib/math/: CMakeLists.txt  eigen_helpers.h
src/MTLib/util/: svg.h
src/Tests/: CMakeLists.txt
src/Tests/comp_geo/: convex_hull_2d_unittest.cpp  half_edge_list_2d_unittest.cpp  is_convex_2d_unittest.cpp  overlap_convex_point_2d_unittest.cpp
src/Tests/ds/: dcel_unittest.cpp
src/Tests/intersection/: intersect_segment_segment_2D_unittest.cpp  intersect_segments_2D_unittest.cpp
